# GranularSynthesizer307

./: .gitignore  CMakeLists.txt
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/HandTracking/: HandTracking.cpp  HandTracking.h
Source/grainEngine/: GrainEngine.cpp  GrainEngine.h
